--- a/public/index.html
+++ b/public/index.html
@@ -706,7 +706,7 @@
 
 <!-- Google Map API -->
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaXXXXXXXXX"></script>
 
 
 <!-- JS Plugins -->
